Give remaining credit total when credits spent/refunded
