# server/responses/task_queued.go
@@ -2,5 +2,6 @@ package responses
 
 // API generate simply returns a UUID to track the request to our compute while its in flight
 type TaskQueuedResponse struct {
-	ID string `json:"id"`
+	ID               string `json:"id"`
+	RemainingCredits int    `json:"remaining_credits"`
 }
